# Game-of-Life

./: .gitignore  .rustfmt.toml  Analysis.md  Cargo.toml
game_of_life/: Analysis.md  Cargo.toml  Makefile  Rapport.md  Requirements.md  index.html  style.scss
game_of_life/benches/: bench.rs
game_of_life/src/: gen_button.rs  main.rs  play_button.rs  rules.rs  rules_button.rs  size_button.rs  speed_button.rs  to_universe.rs  universe.rs
minesweeper/: Cargo.toml  Cell.md  Rappord.md  index.html  style.scss
minesweeper/src/: cell.rs  main.rs  minefield.rs
tower_of_hanoi/: Analysis.md  Cargo.toml  Rappord.md  style.scss
tower_of_hanoi/src/: main.rs
