[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[[bench]]
name = "bench"
harness = false


[dependencies]
bevy = "0.8"
grid = "0.8"
itertools = "0.10.3"
lazy-regex = "2.3.0"
regex = "1.6.0"

[dev-dependencies]
criterion = {version = "0.3.6", features = ["html_reports"]}
rand = "0.8.5"
