[package]
name = "game_of_life_v2"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

[dependencies]
getrandom = { version = "0.2.7", features = ["js"] }
gloo-timers = "0.2.4"
grid = "0.8"
lazy-regex = "2.3.0"
log = "0.4"
rand = "0.8.5"
rayon = "1.5.3"
regex = "1.6.0"
yew = "0.19"
yew-agent = "0.1"
wasm-logger = "0.2"
web-sys = "0.3.60"
